[gd_scene load_steps=5 format=3 uid="uid://fq8y23pl3rwf"]

[ext_resource type="Script" path="res://create_page.gd" id="1_5iowa"]
[ext_resource type="Texture2D" uid="uid://cavhbnn0b3qoj" path="res://assets/ui/background.png" id="2_ssd5f"]
[ext_resource type="Texture2D" uid="uid://cw203koi7bphl" path="res://assets/ui/logo.png" id="3_vm0o5"]
[ext_resource type="Texture2D" uid="uid://cp6gvl7q3kwp0" path="res://assets/ui/Text field.png" id="4_cwooc"]

[node name="CreatePage" type="Node2D"]
script = ExtResource("1_5iowa")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_ssd5f")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(960, 130)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_vm0o5")

[node name="Label" type="Label" parent="."]
offset_left = 701.0
offset_top = 300.0
offset_right = 1220.0
offset_bottom = 369.0
theme_override_font_sizes/font_size = 50
text = "CREATE AN ACCOUNT"

[node name="ProfileName" type="TextureRect" parent="."]
offset_left = 628.0
offset_top = 440.0
offset_right = 1293.0
offset_bottom = 496.0
texture = ExtResource("4_cwooc")

[node name="LabelProfileName" type="LineEdit" parent="ProfileName"]
layout_mode = 0
offset_right = 665.0
offset_bottom = 57.0
theme_override_colors/font_placeholder_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
placeholder_text = "Enter your profile name"
alignment = 1
flat = true

[node name="Label" type="Label" parent="ProfileName/LabelProfileName"]
layout_mode = 0
offset_top = -36.0
offset_right = 241.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 20
text = "How should we call you ?"

[node name="Email" type="TextureRect" parent="."]
offset_left = 628.0
offset_top = 560.0
offset_right = 1293.0
offset_bottom = 616.0
texture = ExtResource("4_cwooc")

[node name="LabelEmail" type="LineEdit" parent="Email"]
layout_mode = 0
offset_right = 665.0
offset_bottom = 57.0
theme_override_colors/font_placeholder_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
placeholder_text = "Enter your email address"
alignment = 1
flat = true

[node name="Label" type="Label" parent="Email/LabelEmail"]
layout_mode = 0
offset_top = -36.0
offset_right = 241.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 20
text = "What's your email ?"

[node name="Password" type="TextureRect" parent="."]
offset_left = 628.0
offset_top = 680.0
offset_right = 1293.0
offset_bottom = 736.0
texture = ExtResource("4_cwooc")

[node name="LabelEmail" type="LineEdit" parent="Password"]
layout_mode = 0
offset_right = 665.0
offset_bottom = 57.0
theme_override_colors/font_placeholder_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
placeholder_text = "Enter your password"
alignment = 1
flat = true

[node name="Label" type="Label" parent="Password/LabelEmail"]
layout_mode = 0
offset_top = -36.0
offset_right = 241.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 20
text = "Create a password"

[node name="Label2" type="Label" parent="Password/LabelEmail"]
layout_mode = 0
offset_top = 60.0
offset_right = 515.0
offset_bottom = 83.0
text = "Use 8 or more characters with a mix of letters, numbers & symbols"
